[project]
name = "giskard-docs"
version = "0.1.0"
description = "The giskard documentation"
authors = [
    {name = "Giskard Team", email = "hello@giskard.ai"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "giskard-core==1.0.1b2",
    "giskard-agents==1.0.2b1",
    "giskard-checks==1.0.1b1",
]

[dependency-groups]
dev = [
    "nbmake>=1.5.5",
    "pytest>=8.3",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/Giskard-AI/giskard-hub"
Repository = "https://github.com/Giskard-AI/giskard-hub"
Documentation = "https://docs.giskard.ai/"

[tool.uv]
# Block compromised litellm versions — supply chain attack (CVE-2026-PENDING)
# https://github.com/BerriAI/litellm/issues/24512
constraint-dependencies = ["litellm!=1.82.7,!=1.82.8"]
